# taiko-untitled

./: .gitignore  Cargo.toml  LICENSE  README.md  assets  log.txt
.vim/: coc-settings.json
src/: analyze.rs  assets.rs  audio.rs  config.rs  errors.rs  ffmpeg_utils.rs  game.rs  game_graphics.rs  game_manager.rs  lib.rs  main.rs  mode.rs  pause.rs  sdl2_utils.rs  structs.rs  tja.rs  utils.rs  value_with_update_time.rs  video_analyzer_assets.rs
src/rodio/: channel_count_converter.rs  data_converter.rs  mod.rs  sample_converter.rs  seek.rs  uniform_source_iterator.rs
