[package]
name = "taiko-untitled"
version = "0.1.0"
authors = ["seasellsheshell"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
average = "0.13.1"
boolinator = "2.4.0"
byteorder = "1.3.4"
chardetng = "0.1.9"
clap = { version = "3.1.8", features = ["derive"] }
config = "0.10.1"
cpal = "0.13.2"
derive_more = "0.99.11"
encoding_rs = "0.8.24"
enum-map = "2.1.0"
ffmpeg4 = { git = "https://github.com/TonalidadeHidrica/rust-ffmpeg4", branch = "fix-missing-variable" }
fs-err = "2.7.0"
itertools = "0.10.2"
kahan = "0.1.4"
linreg = "0.2.0"
maplit = "1.0.2"
notify = "4.0.15"
num = "0.4.0"
once_cell = "1.5.2"
ordered-float = { version = "2.0.0", features = ["serde"] }
regex = "1.4.2"
retain_mut = "0.1.1"
rodio = { version = "0.13.0", path = "../rodio" }
sdl2 = { version = "0.35.2", features = ["image", "ttf"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.79"
universal-audio-decoder = { path = "../universal-audio-decoder/" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
libc = "0.2.124"
