[package]
name = "taiko-untitled"
version = "0.1.0"
authors = ["seasellsheshell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolinator = "2.4.0"
chardetng = "0.1.9"
config = "0.14.0"
cpal = "0.13.2"
derive_more = "0.99.11"
encoding_rs = "0.8.24"
enum-map = "0.6.3"
itertools = "0.9.0"
notify = "4.0.15"
num = "0.4.1"
once_cell = "1.5.2"
ordered-float = "2.0.0"
regex = "1.4.2"
rodio = { version = "0.13.0", path = "../rodio" }
sdl2 = { version = "0.36.0", features = ["image"] }
sdl2-sys = "0.36.0"
serde = { version = "1.0.115", features = ["derive"] }
universal-audio-decoder = { path = "../universal-audio-decoder/" }
